--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container  justify-content-center">
-    <h1>Welcome to ScheduledTweets app</h1>
+    <h1><%= t('welcome-message') %> </h1>
 </div>
 
-<%= button_to "Connect Twitter", "/auth/twitter", data: { turbo: false }, method: :post, class: "btn btn-primary" %>
+<%= button_to t('connect-twitter'), "/auth/twitter", data: { turbo: false }, method: :post, class: "btn btn-primary" %>
