--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,22 +1,21 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <%= link_to "Navbar", root_path, class: "navbar-brand"%>
+    <%= link_to t('nav-bar'), root_path, class: "navbar-brand"%>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <%= link_to "Home", root_path, class: "nav-link"%>
+          <%= link_to t('home'), root_path, class: "nav-link"%>
         </li>
         <li class="nav-item">
-          <%= link_to "Twitter Accounts", twitter_accounts_path, class: "nav-link"%>
+        <%= link_to t('twitter-accounts'), twitter_accounts_path, class: "nav-link" %>        </li>
+        <li class="nav-item">
+          <%= link_to t('tweets'), tweets_path, class: "nav-link"%>
         </li>
         <li class="nav-item">
-          <%= link_to "Tweets", tweets_path, class: "nav-link"%>
-        </li>
-        <li class="nav-item">
-          <%= link_to "About", about_path, class: "nav-link"%>    
+          <%= link_to t('about'), about_path, class: "nav-link"%>    
         </li>
       </ul>
 
@@ -26,14 +25,14 @@
             <%= link_to "#{Current.user.email}", password_path, class: "nav-link" %>
             </li>
             <li class="nav-item">
-            <%= button_to "Logout", logout_path, method: :delete, class: "btn btn-outline-secondary" %>
+            <%= button_to t('log-out'), logout_path, method: :delete, class: "btn btn-outline-secondary" %>
             </li>
         <% else %>
             <li class="nav-item">
-            <%= link_to "Sign Up", sign_up_path, class: "nav-link" %>
+            <%= link_to t('sign-up'), sign_up_path, class: "nav-link" %>
             </li>
             <li class="nav-item">
-            <%= link_to "Login", sign_in_path, class: "nav-link" %>
+            <%= link_to t('log-in'), sign_in_path, class: "nav-link" %>
             </li>
         <% end %>
       </ul>
